# HenianSB_STG

./: .gitignore  Pipfile  button.py  config_example.ini  config_loader.py  enemy.py  enemy_bullet.py  game_over_scene.py  image.py  menu_scene.py  pdm.toml  pyproject.toml  readme.md  self_bullet.py  settings.py  ship.py  text.py  tools.py  ty.py  ty.spec  tygame.spec  xlb_board.py
.github/workflows/: build.yml
src/resources/images/: tysm.icns
src/stg/: __init__.py  __main__.py  __version__.py  collide_body.py  config.py  config_loader.py  settings.py
src/stg/components/: board.py  text.py
src/stg/scene/: game_over.py  menu.py
src/stg/sprites/: enemy.py  enemy_bullet.py  player.py  player_bullet.py
