[project]
name = "beating-agent-v-stg"
version = "0.3.1"
description = "天依的一款弹幕设计游戏，使用Python和Pygame开发天依的一款弹幕设计游戏，使用Python和Pygame开发"
authors = [
    {name = "Catfootbeats (某某)"},
    {name = "Joseph Chris", email = "joseph@josephcz.xyz"},
]
dependencies = [
    "pyinstaller>=5.13.0",
    "pygame>=2.5.0",
    "toml>=0.10.2",
]
requires-python = ">=3.8,<3.13"
readme = "README.md"
license = {text = "NON-FREE"}

[tool.pdm.scripts]
start = "python -m stg"
build = "pyinstaller --noconfirm tygame.spec"